// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTreeNode Given a node When the node can and has children and the node is valid Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 3</span></div>
    <m-accordion-transition>
        <ul class="m-tree-node__children" style="display:none;">
            <li class="m-tree-node m-tree-node__child">
                <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 4</span></div>
                <m-accordion-transition>
                    <ul class="m-tree-node__children" style="display:none;">
                        <li class="m-tree-node__child-empty">
                            m-tree-node:empty
                        </li>
                    </ul>
                </m-accordion-transition>
            </li>
        </ul>
    </m-accordion-transition>
</li>
`;

exports[`MTreeNode Given a node When the node can have children but don't have any Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 2</span></div>
    <m-accordion-transition>
        <ul class="m-tree-node__children" style="display:none;">
            <li class="m-tree-node__child-empty">
                m-tree-node:empty
            </li>
        </ul>
    </m-accordion-transition>
</li>
`;

exports[`MTreeNode Given a node When the node can't have children and the node is valid Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 1</span></div>
</li>
`;
